# SimplePM

./: .gitignore  CMakeLists.txt  main.cpp
data/area/: 1.m
src/: Area.cpp  Area.h  Game.cpp  Game.h  Map.cpp  Map.h  Npc.cpp  Npc.h  Player.cpp  Player.h  Resource.cpp  Resource.h  Screen.cpp  Screen.h  Tile.cpp  Tile.h  Unit.cpp  Unit.h
